--- a/index.html
+++ b/index.html
@@ -149,18 +149,40 @@ Participants should bring their laptops and plan to participate actively. By the
 
 <div class="row">
   <div class="col-md-6">
-
-    <h3>Day 1</h3>
+    <h3>Monday, August 7</h3>
     <table class="table table-striped">
-      <tr> <td>Morning</td>  <td>{{page.day1_am}}</td> </tr>
-       <tr> <td>Afternoon</td>  <td>{{page.day1_pm}}</td> </tr>
+      <tr> <td>Morning</td><td>{{page.day1_am}}</td> </tr>
+      <tr> <td>09:00</td>  <td>Workshop overview</td> </tr>
+      <tr> <td>09:30</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/01_intro_and_cloud_setup.md>Using cloud computing for genomics</a> </td> </tr>
+      <tr> <td>10:00</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/02_the_filesystem.md>Introduction to Unix: navigating, paths, shortcuts</a></td> </tr>
+      <tr> <td>10:45</td>  <td>Coffee/tea break</td> </tr>
+      <tr> <td>11:00</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/02_the_filesystem.md>Introduction to Unix: examining files, modifying, writing</a></td> </tr>
+      <tr> <td>12:00</td>  <td>Lunch on your own</td> </tr>
+      <tr> <td>Afternoon</td>  <td>{{page.day1_pm}}</td> </tr>
+      <tr> <td>13:00</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/03_searching_files.md>Introduction to Unix: searching and redirection</a></td> </tr>
+      <tr> <td>13:45</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/04_loops_and_scripts.md>Shell scripts</a></td> </tr>
+      <tr> <td>14:30</td>  <td>Coffee/tea break</td> </tr>
+      <tr> <td>14:45</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/04_loops_and_scripts.md>Shell scripts (cont)</a></td> </tr>
+      <tr> <td>15:45</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/05_planning-genomics.md>Genomics planning </a></td> </tr>
+      <tr> <td>16:45</td>  <td>Wrap-up</td> </tr>
+    </table>
     </table>
  
- 
-    <h3>Day 2</h3>
+    <h3>Tuesday, August 8</h3>
     <table class="table table-striped">
       <tr> <td>Morning</td>  <td>{{page.day2_am}}</td> </tr>
+      <tr> <td>09:00</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/06_intro-to-dataset.md>Introduction to the workshop dataset</a></td> </tr>
+      <tr> <td>09:15</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/06_intro-to-dataset.md#accessing-the-original-archived-data>Examining data on the NCBI SRA database</a></td> </tr>
+      <tr> <td>09:45</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/07_read_qc.md>QC of NGS data</a></td> </tr>
+      <tr> <td>10:30</td>  <td>Coffee/tea break</td> </tr>
+      <tr> <td>10:45</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/07_read_qc.md>QC of NGS data (cont)</a></td> </tr>
+      <tr> <td>12:00</td>  <td>Lunch on your own</td> </tr>
       <tr> <td>Afternoon</td>  <td>{{page.day2_pm}}</td> </tr>
+      <tr> <td>13:00</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/08_variant-calling-workflow.md>Variant calling workflow (QC, alignment, variant calling)</a></td> </tr> 
+      <tr> <td>14:00</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/09_automating_workflow.md>Automating the workflow</a></td> </tr>
+      <tr> <td>14:30</td>  <td>Coffee/tea break</td> </tr>
+      <tr> <td>14:45</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/09_automating_workflow.md>Automating the workflow (cont)</a></td> </tr>
+      <tr> <td>16:45</td>  <td>Wrap-up</td> </tr>
     </table>
  </div>
 </div>
@@ -299,16 +321,31 @@ Participants should bring their laptops and plan to participate actively. By the
 
 <p>
 To participate in a Data Carpentry workshop, you will need working copies of the 
-described software. Please make sure to install everything (or at least to download 
-the installers) before the start of your workshop. Participants should bring and use 
-their own laptops to insure the proper setup of tools for an efficient workflow 
-once you leave the workshop.
+software named below. Please make sure to install everything before the start of 
+your workshop. Participants should bring and use their own laptops to insure the 
+proper setup of tools for an efficient workflow once you leave the workshop.
+</p>
 <p>
-Please follow these <a href=install.html>Setup Instructions</a>.
+<b>Mac users</b>
+<ol>
+<li><a href=https://www.java.com/en/download/>Java</a></li>
+<li><a href=https://filezilla-project.org/download.php?show_all=1>Filezilla</a></li>
+<li><a href=https://www.broadinstitute.org/igv/?q=registration/>Integrative Genomics Viewer (IGV)</a> (You will need to enter your email address; don't worry, they don't send spam.)</li>
+</ol>
+</p>
+<p>
+<b>Windows users</b>
+<ol>
+<li><a href=http://www.putty.org/>Putty</a> (Download putty.exe)</li>
+<li><a href=https://www.java.com/en/download/>Java</a></li>
+<li><a href=https://filezilla-project.org/download.php?show_all=1>Filezilla</a></li>
+<li><a href=https://www.broadinstitute.org/igv/?q=registration/>Integrative Genomics Viewer (IGV)</a> (You will need to enter your email address; don't worry, they don't send spam.)</li>
+</ol>
+</p>
 
 <p>
-  We maintain a list of common issues that occur during installation as a reference for instructors
-  that may be useful on the
+  We maintain a list of common issues that occur during installation as a reference 
+  for instructors that may be useful on the
   <a href = "https://github.com/swcarpentry/workshop-template/wiki/Configuration-Problems-and-Solutions">Configuration Problems and Solutions wiki page</a>.
 </p>
 
