adding contact info

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ startdate: 2017-08-07      # use YYYY-MM-DD format like 2015-01-01
 enddate: 2017-08-08        # use YYYY-MM-DD format like 2015-01-02
 instructor: ["Kate Hertweck", "Erin Becker"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
 helper: ["TBA"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
-contact: "TBA"      # contact email address for workshop organizer, such as "grace@hopper.org"
+contact: "ecscharfstein@lbl.gov"      # contact email address for workshop organizer, such as "grace@hopper.org"
 etherpad:         # optional (insert the URL for your Etherpad if you're using one)
 eventbrite:       # optional (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
 day1_am: "Introduction to the Shell and Cloud Computing"
@@ -119,7 +119,7 @@ Participants should bring their laptops and plan to participate actively. By the
 -->
 <p>
   <strong>Contact</strong>:
-  Please mail
+  Please mail Erin Scharfstein at 
   {% if page.contact %}
     <a href='mailto:{{page.contact}}'>{{page.contact}}</a>
   {% else %}
