--- a/index.html
+++ b/index.html
@@ -152,18 +152,12 @@ Participants should bring their laptops and plan to participate actively. By the
     <h3>Monday, August 7</h3>
     <table class="table table-striped">
       <tr> <td>Morning</td><td>{{page.day1_am}}</td> </tr>
-      <tr> <td>09:00</td>  <td>Workshop overview</td> </tr>
-      <tr> <td>09:30</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/01_intro_and_cloud_setup.md>Using cloud computing for genomics</a> </td> </tr>
-      <tr> <td>10:00</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/02_the_filesystem.md>Introduction to Unix: navigating, paths, shortcuts</a></td> </tr>
+      <tr> <td>09:00</td>  <td>Welcome and overview of genomic data</td> </tr>
       <tr> <td>10:45</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/02_the_filesystem.md>Introduction to Unix: examining files, modifying, writing</a></td> </tr>
       <tr> <td>12:00</td>  <td>Lunch on your own</td> </tr>
       <tr> <td>Afternoon</td>  <td>{{page.day1_pm}}</td> </tr>
-      <tr> <td>13:00</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/03_searching_files.md>Introduction to Unix: searching and redirection</a></td> </tr>
-      <tr> <td>13:30</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/04_loops_and_scripts.md>Shell scripts</a></td> </tr>
+      <tr> <td>13:00</td>  <td>Introduction to command line</td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>14:45</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/04_loops_and_scripts.md>Shell scripts (cont)</a></td> </tr>
-      <tr> <td>15:45</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/05_planning-genomics.md>Genomics planning </a></td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
     </table>
     </table>
@@ -171,17 +165,12 @@ Participants should bring their laptops and plan to participate actively. By the
     <h3>Tuesday, August 8</h3>
     <table class="table table-striped">
       <tr> <td>Morning</td>  <td>{{page.day2_am}}</td> </tr>
-      <tr> <td>09:00</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/06_intro-to-dataset.md>Introduction to the workshop dataset</a></td> </tr>
-      <tr> <td>09:15</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/06_intro-to-dataset.md#accessing-the-original-archived-data>Examining data on the NCBI SRA database</a></td> </tr>
-      <tr> <td>09:45</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/07_read_qc.md>QC of NGS data</a></td> </tr>
+      <tr> <td>09:00</td>  <td>More command line</a></td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>10:45</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/07_read_qc.md>QC of NGS data (cont)</a></td> </tr>
       <tr> <td>12:00</td>  <td>Lunch on your own</td> </tr>
       <tr> <td>Afternoon</td>  <td>{{page.day2_pm}}</td> </tr>
-      <tr> <td>13:00</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/08_variant-calling-workflow.md>Variant calling workflow (QC, alignment, variant calling)</a></td> </tr> 
-      <tr> <td>14:00</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/09_automating_workflow.md>Automating the workflow</a></td> </tr>
+      <tr> <td>13:00</td>  <td>Variant calling workflow (QC, alignment, variant calling)</a></td> </tr> 
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>14:45</td>  <td><a href=https://github.com/hbc/dc_2016_04/blob/master/lessons/09_automating_workflow.md>Automating the workflow (cont)</a></td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
     </table>
  </div>
