update schedule headers

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ helper: ["TBA"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth 
 contact: "ecscharfstein@lbl.gov"      # contact email address for workshop organizer, such as "grace@hopper.org"
 etherpad:         # optional (insert the URL for your Etherpad if you're using one)
 eventbrite:       # optional (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
-day1_am: "Introduction to the Shell and Cloud Computing"
-day1_pm: "The Shell and Project Setup"
-day2_am: "Know Your Data" 
+day1_am: "Welcome and overview of genomic data"
+day1_pm: "Introduction to command line"
+day2_am: "Command line continued" 
 day2_pm: "Variant Calling and Workflow Automation"
 ---
 <!--
@@ -152,11 +152,11 @@ Participants should bring their laptops and plan to participate actively. By the
     <h3>Monday, August 7</h3>
     <table class="table table-striped">
       <tr> <td>Morning</td><td>{{page.day1_am}}</td> </tr>
-      <tr> <td>09:00</td>  <td>Welcome and overview of genomic data</td> </tr>
-      <tr> <td>10:45</td>  <td>Morning break</td> </tr>
+      <tr> <td>09:00</td>  <td>Morning start time</td> </tr>
+      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch on your own</td> </tr>
       <tr> <td>Afternoon</td>  <td>{{page.day1_pm}}</td> </tr>
-      <tr> <td>13:00</td>  <td>Introduction to command line</td> </tr>
+      <tr> <td>13:00</td>  <td>Afternoon start time</td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
     </table>
@@ -165,11 +165,11 @@ Participants should bring their laptops and plan to participate actively. By the
     <h3>Tuesday, August 8</h3>
     <table class="table table-striped">
       <tr> <td>Morning</td>  <td>{{page.day2_am}}</td> </tr>
-      <tr> <td>09:00</td>  <td>More command line</a></td> </tr>
+      <tr> <td>09:00</td>  <td>Morning start time</a></td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch on your own</td> </tr>
       <tr> <td>Afternoon</td>  <td>{{page.day2_pm}}</td> </tr>
-      <tr> <td>13:00</td>  <td>Variant calling workflow (QC, alignment, variant calling)</a></td> </tr> 
+      <tr> <td>13:00</td>  <td>Afternoon start time</a></td> </tr> 
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
     </table>
