--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ humantime: "9:00 am - 4:00 pm"    # human-readable time (e.g., "9:00 am - 4:30 p
 startdate: 2017-08-07      # use YYYY-MM-DD format like 2015-01-01
 enddate: 2017-08-08        # use YYYY-MM-DD format like 2015-01-02
 instructor: ["Kate Hertweck", "Erin Becker"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: ["TBA"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+helper: ["Nima Hejazi"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: "ecscharfstein@lbl.gov"      # contact email address for workshop organizer, such as "grace@hopper.org"
 etherpad: http://pad.software-carpentry.org/2017-08-07-LBNL        # optional (insert the URL for your Etherpad if you're using one)
 eventbrite:       # optional (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
